--- a/styles/resume.css
+++ b/styles/resume.css
@@ -6,7 +6,7 @@ body {
 /* Computer Browser */
 #menu-bar {
     overflow: hidden;
-    background-color: #0a192f;
+    background-color: #0983d9;
 }
 #menu-bar a {
     color: white;
